# sensai-hardware

./: .gitignore  README.md  build-package.sh  main.py  pyproject.toml  requirements.txt
server/: __init__.py  main.py
server/api/: relay.py  temperature.py
server/db/: manager.py  schemas.py  supabase_client.py
server/models/: Temperature.py
server/services/: monitor.py  relay_controller.py  temperature_db.py  temperature_sensor.py  utils.py
server/tests/test_api/: test_endpoints.py  test_server.py  test_temperature_sql_api.py
